It seems that accessing to a PCI configration space where devices are unavailable causes data_access_error trap.  We need to check a validity of OF node embeded in pcitag to avoid the trap.

Fixes PR port-sparc64/42545.